--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,5 +10,9 @@ spring:
     properties:
       hibernate:
         format_sql: true
+  security:
+    user:
+      name: user
+      password: 1234
 logging.level:
   org.hibernate.SQL: debug
