--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  config:
+    import: optional:file:.env[.properties]
   datasource:
     url: jdbc:h2:tcp://localhost:9092/~/test
     username: sa
@@ -14,5 +16,16 @@ spring:
   #   user:
   #     name: user
   #     password: 1234
+  data:
+    mongodb:
+      uri: ${MONGODB_URI}
+      database: ${DATABASE_NAME}
 logging.level:
   org.hibernate.SQL: debug
+server:
+  port: 8088
+logging:
+  level:
+    org:
+      springframework:
+        security: DEBUG
