--- a/build.gradle
+++ b/build.gradle
@@ -34,9 +34,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
-	// implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
-	// implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
-	// implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
+	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
 
 	compileOnly 'org.projectlombok:lombok'
@@ -51,9 +51,9 @@ dependencies {
 	testImplementation 'org.springframework.security:spring-security-test'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.mockito:mockito-core:3.12.4'
-	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
-	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
-	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2' // or 'io.jsonwebtoken:jjwt-gson:0.11.2' for Gson support
+//	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+//	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
+//	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2' // or 'io.jsonwebtoken:jjwt-gson:0.11.2' for Gson support
 }
 
 tasks.named('test') {
